update swagger and controller to use renamed enpoint paths
