# docs/swagger.yaml
@@ -13,7 +13,7 @@ info:
   license:
     name: MIT License
     url: "https://opensource.org/licenses/MIT"
-  version: 1.0.0
+  version: 2.1.1
 servers:
   - url: http://localhost:8080
 tags:
@@ -875,63 +875,7 @@ paths:
                 $ref: "#/components/schemas/RecipeDTOPage"
         "404":
           description: The specified household or recipe category was not found
-  /recipes/{householdId}/recipe:
-    get:
-        tags:
-          - recipes
-        summary: Gets all the recipes added/bookmarked to a household
-        description: Gets a list of all the households that have been added/bookmarked to a given household
-        operationId: getHouseholdRecipes
-        parameters:
-          - name: householdId
-            in: path
-            description: ID of the household to check for ingredients
-            required: true
-            schema:
-              type: integer
-              format: int64
-        responses:
-          "200":
-            description: Operation successfull
-            content:
-              application/json:
-                schema:
-                  type: array
-                  items:
-                    $ref: "#/components/schemas/HouseholdRecipeDTO"
-          "404":
-            description: The specified household was not found
   /recipes/{householdId}/recipe/{id}:
-    post:
-      tags:
-        - recipes
-      summary: Adds a recipe to a household
-      description: Adds a recipe as bookmarked to the given household.
-      operationId: createHouseholdRecipe
-      parameters:
-        - name: householdId
-          in: path
-          description: ID of the household to add the recipe to
-          required: true
-          schema:
-            type: integer
-            format: int64
-        - name: id
-          in: path
-          description: ID of the recipe to add
-          required: true
-          schema:
-            type: integer
-            format: int64
-      responses:
-        "201":
-          description: Success - the recipe was added to household
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/HouseholdRecipeDTO"
-        "404":
-          description: The specified recipe or household was not found
     get:
       tags:
         - recipes
@@ -985,6 +929,95 @@ paths:
                 $ref: '#/components/schemas/RecipeDTO'
         '404':
           description: Item type not found/Recipe category not found/Allergen not found
+  /householdrecipe/{householdId}/recipe/{id}:
+    post:
+        tags:
+          - household recipe
+        summary: Adds a recipe to a household
+        description: Adds a recipe as bookmarked to the given household.
+        operationId: createHouseholdRecipe
+        parameters:
+          - name: householdId
+            in: path
+            description: ID of the household to add the recipe to
+            required: true
+            schema:
+              type: integer
+              format: int64
+          - name: id
+            in: path
+            description: ID of the recipe to add
+            required: true
+            schema:
+              type: integer
+              format: int64
+        responses:
+          "201":
+            description: Success - the recipe was added to household
+            content:
+              application/json:
+                schema:
+                  $ref: "#/components/schemas/HouseholdRecipeDTO"
+          "404":
+            description: The specified recipe or household was not found
+  /householdrecipe/{householdId}/recipe:
+    get:
+        tags:
+          - household recipe
+        summary: Gets all the recipes added/bookmarked to a household
+        description: Gets a list of all the households that have been added/bookmarked to a given household
+        operationId: getHouseholdRecipes
+        parameters:
+          - name: householdId
+            in: path
+            description: ID of the household to check for ingredients
+            required: true
+            schema:
+              type: integer
+              format: int64
+        responses:
+          "200":
+            description: Operation successfull
+            content:
+              application/json:
+                schema:
+                  type: array
+                  items:
+                    $ref: "#/components/schemas/HouseholdRecipeDTO"
+          "404":
+            description: The specified household was not found
+  /recipecategory:
+    get:
+      tags:
+        - recipe category
+      summary: Get all recipe categories
+      description: Returns a list of recipe categories containing all recipe categories from database
+      operationId: getAllRecipeCategories
+      responses:
+        200:
+          description: A list of all recipe categories
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/RecipeCategory"
+  /allergens:
+    get:
+      tags:
+        - allergen
+      summary: Get all allergens
+      description: Returns a list of allergens containing all allergens from database
+      operationId: getAllergens
+      responses:
+        200:
+          description: A list of all allergens
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/AllergenRequest"
 components:
   schemas:
     CreateUser:
